# ModelGenerator

./: .gitignore  Dockerfile  README.md  pyproject.toml  tests.py
.github/workflows/: docs.yml  publish.yml
configs/: defaults.yaml
configs/examples/: lora_backbone.yaml  quick_dev_run.yaml  save_predictions.yaml  wandb.yaml
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: index.md  quick_start.md
docs/docs/api_reference/: adapters.md  backbones.md  callbacks.md  data.md  tasks.md
docs/docs/experiment_design/: backbones.md  data.md  datafiles.md  index.md  tasks.md
docs/docs/tutorials/: dependency_mapping.md  finetuning_scheduler.md  kfold_cross_validation.md  structure_tokenizer.md  (+3 more)
experiments/AIDO.Cell/: cell_type_classification.yaml  readme.md
experiments/AIDO.RNA/: README.md  expression_level_prediction.sh  modification_site_prediction.sh  ncrna_family_classfification.sh  protein_abundance_prediction.sh  splice_site_prediction.sh  transcript_abundance_prediction.sh  translation_efficiency_prediction.sh
experiments/AIDO.StructureTokenizer/: README.md  decode.yaml  decode_example_input.tsv  encode.yaml  encode_decode.yaml  extract_structure_tokenizer_codebook.py  protein2structoken_16b.yaml  protein2structoken_example_input.csv  register_dataset.py  struct_token_format_conversion.py  structure_encoding.sh  structure_prediction.sh
modelgenerator/: callbacks.py  lr_schedulers.py  main.py  metrics.py
modelgenerator/adapters/: __init__.py  adapters.py  base.py
modelgenerator/backbones/: __init__.py  backbones.py  base.py
modelgenerator/data/: __init__.py  base.py  data.py
modelgenerator/huggingface_models/: utils.py
modelgenerator/prot_inv_fold/: adapter.py  extra_utils.py  pif_task.py
modelgenerator/rna_inv_fold/: adapter.py  layers.py  rif_task.py
modelgenerator/rna_ss/: rna_ss_data.py  rna_ss_task.py  rna_ss_utils.py
modelgenerator/structure_tokenizer/: README.md
modelgenerator/tasks/: __init__.py  base.py  tasks.py
(+145 files in other folders)
